Adding zoom out of application.

--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,8 @@ body,
 }
 html,
 body {
+  transform: scale(0.9);
+  transform-origin: center top;
   margin: 0;
   padding: 0;
   background: var(--diamond-blue);
