--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  height: 6vh;
+  height: 10vh;
   width: 100%;
   position: relative;
   background-color: var(--diamond-blue);
@@ -7,23 +7,11 @@
   font-size: 2vh;
 }
 
-.imgWrapper {
-  display: flex;
-  flex-grow: 1;
-  flex-basis: 0;
-  min-width: 0;
-  justify-content: flex-start;
-  align-items: center;
-}
-
 .img {
-  height: 50%;
+  display: flex;
+  position: absolute;
+  height: 10vh;
 }
-
-a {
-  padding: 20px;
-}
-
 
 .h1 {
   clear: none;
@@ -36,34 +24,8 @@ a {
   color: var(--light-text);
 }
 
-.h1 a,a:visited {
+.h1 a,
+a:visited {
   text-decoration: none;
-  color: var(--light-text);
-}
-
-.buttonWrapper {
-  width: 100px;
-  display: flex;
-  flex-grow: 1;
-  flex-basis: 0;
-  min-width: 0;
-  justify-content: flex-end;
-  align-items: center;
-  border: 0;
-  margin: 1rem;
-}
-
-.button {
-  background-color: transparent;
-  color: var(--light-text);
-  margin: 10px;
-  font-size: 1.4rem;
-  border: outset;
-  border-width: 2px;
-  text-decoration: none;
-  padding: 4px;
-}
-
-.button:visited {
   color: var(--light-text);
 }
