--- a/src/app.css
+++ b/src/app.css
@@ -18,7 +18,7 @@ body,
 #root {
   height: 100%;
   width: 100%;
-  background-color: var(--diamond-blue);
+  background-color: var(--light-text);
 }
 html,
 body {
