--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -2,7 +2,8 @@
   height: 10vh;
   width: 100%;
   position: relative;
-  background-color: var(--diamond-blue);
+  background-color: white;
+  color: white;
   display: flex;
   font-size: 2vh;
 }
@@ -21,7 +22,6 @@
   flex-basis: 0;
   min-width: 0;
   align-items: center;
-  color: var(--light-text);
 }
 
 .h1 a,
