Improve the generic cycling implementation
Simplifies the generic cycling methods and user experience. Use the
recommended fetch() method to read the JSON file. Handles errors when parsing
 the JSON file.

--- a/src/app.css
+++ b/src/app.css
@@ -33,6 +33,11 @@ html {
   font-size: 62.5%;
 }
 
+.Error {
+  margin-left: 10px;
+  font-size: 150%;
+}
+
 .App {
   height: 100%;
   overflow: hidden;
