--- a/src/app.css
+++ b/src/app.css
@@ -38,25 +38,25 @@ html {
   font-size: 150%;
 }
 
-.App {
+.AppScreen {
   height: 100%;
   overflow: hidden;
   text-align: center;
 }
 
-.AppWeb {
+.AppPublic{
   height: 100%;
   overflow: auto;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.AppScreen-logo {
+  animation: AppScreen-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
 
-.AppWeb-header {
+.AppPublic-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -67,7 +67,7 @@ html {
   color: white;
 }
 
-.App-link {
+.AppScreen-link {
   color: #61dafb;
 }
 
